--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Insta-Sohor</title>
-    
+
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -66,13 +66,13 @@
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
                         aria-controls="panelsStayOpen-collapseOne">
-                        <span class="fw-bold">How Does Javascript Work</span>
+                        <span class="fw-bold">How Does Javascript Work?</span>
                     </button>
                 </h2>
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                     aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
-                        <strong>This is the first item's accordion body.</strong> It is shown by default, until the
+                        <strong>Answer: </strong> It is shown by default, until the
                         collapse plugin adds the appropriate classes that we use to style each element. These classes
                         control the overall appearance, as well as the showing and hiding via CSS transitions. You can
                         modify any of this with custom CSS or overriding our default variables. It's also worth noting
