bonus part design

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     </main>
 
-    <section>
+    <section class="shadow-lg p-3 mb-5 bg-body rounded w-75 text-center mx-auto">
         <div class="accordion" id="accordionPanelsStayOpenExample">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
