first question solve

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
                     aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
-                        <strong>Answer: </strong> It is shown by default, until the
-                        collapse plugin adds the appropriate classes that we use to style each element. These classes
-                        control the overall appearance, as well as the showing and hiding via CSS transitions. You can
-                        modify any of this with custom CSS or overriding our default variables. It's also worth noting
-                        that just about any HTML can go within the <code>.accordion-body</code>, though the transition
-                        does limit overflow.
+                        <strong>Answer: </strong> Javascript is an interpreted programming language.It interpreted line
+                        by line.Javascript works in browser with the help of javascript engine.Different browser have
+                        different engine.Javascript works in chrome browser with the help of javascript engine which
+                        called v8 engine.this engine is written in c++.v8 engine which execute code with the help of jit
+                        compiler.Chrom v8 engine parse javascript source code,then abstract syntax tree,it converts into
+                        Byte code,then machine code.Finally code runs to the CPU.This is how Javascript work.
                     </div>
                 </div>
             </div>
